--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header {
   /* Background city image */
   .title-background {
     border: black solid;
-    background-image: url("../images/city-3.jpg");
+    background-image: url("https://media.fshoq.com/images/140/panorama-of-manhattan-new-york-city-140-medium.jpg");
 
   }
   /* Text in front of image (city) */
